# SimOps

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260328_0001_create_events_table.py
backend/app/: config.py  crud.py  database.py  enums.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  schemas.py
backend/app/routers/: events.py  ops.py
backend/simops_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_events.py  test_ops.py
docs/: api-contract.md  architecture.md  data-model.md  roadmap.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/docker-entrypoint.d/: 40-env-config.sh
frontend/public/: config.js
frontend/src/: App.vue  api.js  styles.css
frontend/src/components/: EventDetail.vue  EventSummary.vue  EventsTable.vue  EventsToolbar.vue
infra/: README.md
infra/grafana/dashboards/: simops-overview.json
infra/grafana/provisioning/dashboards/: dashboard-provider.yml
infra/loki/: config.yml
infra/prometheus/: prometheus.yml
infra/promtail/: promtail.yml
simulator/: .env.example  Dockerfile  README.md  pyproject.toml
simulator/app/: client.py  config.py  generator.py  logging_config.py  main.py  schemas.py
simulator/simops_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
simulator/tests/: test_generator.py
